restructured code to have presentation package

--- a/SmartHomeApp/app/src/main/AndroidManifest.xml
+++ b/SmartHomeApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreenActivity" android:screenOrientation="landscape">
+        <activity android:name=".presentation.ui.SplashScreenActivity" android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
