improved login screen and started main activity

--- a/SmartHomeApp/app/src/main/AndroidManifest.xml
+++ b/SmartHomeApp/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity
             android:name=".presentation.ui.LoginActivity"
             android:label="@string/title_activity_login"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
+        <activity android:name=".presentation.ui.MainActivity"></activity>
     </application>
 
 </manifest>
