--- a/SmartHomeApp/app/build.gradle
+++ b/SmartHomeApp/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.1.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.aurelhubert:ahbottomnavigation:2.0.6'
+    compile 'com.roughike:bottom-bar:2.2.0'
 }
