added util package | icon for upload | started fragments | #13, #4, #5

--- a/SmartHomeApp/app/src/main/AndroidManifest.xml
+++ b/SmartHomeApp/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             android:name=".presentation.ui.LoginActivity"
             android:label="@string/title_activity_login"
             android:screenOrientation="landscape" />
-        <activity android:name=".presentation.ui.MainActivity"/>
+        <activity android:name=".presentation.ui.MainActivity" />
+        <activity android:name=".presentation.ui.BaseActivity"></activity>
     </application>
 
 </manifest>
