--- a/SmartHomeApp/app/build.gradle
+++ b/SmartHomeApp/app/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.1.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.roughike:bottom-bar:2.2.0'
     compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.android.support:support-v4:25.2.0'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
