--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,20 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.roughike:bottom-bar:2.2.0'
-    compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:support-v4:25.2.0'
+
+    // Converter from Java Objects into JSON and vice-versa
+    compile 'com.google.code.gson:gson:2.7'
+
+    // To bind ui views
+    compile 'com.jakewharton:butterknife:8.5.1'
+
+    // Type-safe HTTP client for web requests
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile project(':commonlib')
