--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -28,16 +30,12 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:support-v4:25.2.0'
-
     // Converter from Java Objects into JSON and vice-versa
     compile 'com.google.code.gson:gson:2.7'
-
     // To bind ui views
     compile 'com.jakewharton:butterknife:8.5.1'
-
     // Type-safe HTTP client for web requests
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
-
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile project(':commonlib')
