--- a/commonlib/build.gradle
+++ b/commonlib/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'org.dom4j:dom4j:2.0.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
 }
 
 sourceCompatibility = "1.7"
