--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".SmartHomeApplication">
+        android:name=".app.SmartHomeApplication">
         <activity
             android:name=".SplashScreenActivity"
             android:screenOrientation="landscape">
